--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/MarkusWiebe/achievmentsAPI#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "steamapi": "^2.0.3"
   }
