--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "achievmentsapi",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "start:dev": "set NODE_ENV=development && node index.js"
+    "start": "nodemon --exec babel-node src/index.js",
+    "start:dev": "set NODE_ENV=development && node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,9 @@
     "steamapi": "^2.0.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-2": "^6.24.1",
     "morgan": "^1.9.1"
   }
 }
