--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon --exec babel-node src/index.js",
-    "start:dev": "set NODE_ENV=development && nodemon --exec babel-node src/index.js"
+    "debug": "nodemon --inspect --exec babel-node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,19 +19,22 @@
   },
   "homepage": "https://github.com/MarkusWiebe/achievmentsAPI#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.4.0",
+    "morgan": "^1.9.1",
     "steamapi": "^2.0.3",
-    "morgan": "^1.9.1"
+    "body-parser": "^1.18.3",
+    "mongoose": "^5.4.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
-    "bcrypt": "^3.0.3",
-    "mongoose": "^5.4.2"
+    "eslint": "^5.12.1"
+    
   }
 }
